# jaxfit

./: .gitignore  .readthedocs.yaml  LICENSE.txt  README.md  pyproject.toml  setup.cfg
benchmark/: readme.md  speed_comparison.py  test_comparison.py
benchmark/classes/: comparison_utils.py  gauss2d_jax.py  gauss2d_numpy.py  random_gaussian_params.py
benchmark/timed_scipy_curve_fit/: scipy_common.py  scipy_dogbox.py  scipy_least_squares.py  scipy_minpack.py  scipy_numdiff.py  scipy_trf.py  test.py  test_2d.py
docs/: autodocs.rst  conf.py  index.rst  main.rst  requirements.txt
docs/autodoc/: jaxfit.common_jax.rst  jaxfit.common_scipy.rst  jaxfit.least_squares.rst  jaxfit.rst  jaxfit.trf.rst  modules.rst  tests.add_test_lsq_common.rst  tests.rst  tests.test_least_squares.rst  tests.test_minpack.rst
docs/notebooks/: JAXFit_2D_Gaussian_Demo.ipynb  JAXFit_Quickstart.ipynb
docs/notebooks/.ipynb_checkpoints/: JAXFit_2D_Gaussian_Demo-checkpoint.ipynb
docs/source/: README.rst  notebooks.rst
docs/source/autodoc/: jaxfit.loss_functions.rst  jaxfit.minpack.rst
examples/: JAXFit 2D Gaussian Demo.ipynb  JAXFit Quickstart.ipynb
examples/.ipynb_checkpoints/: JAXFit Quickstart-checkpoint.ipynb
jaxfit/: __init__.py  _optimize.py  common_jax.py  common_scipy.py  least_squares.py  loss_functions.py  minpack.py  trf.py
tests/: test_least_squares.py  test_minpack.py
tests/debug_scripts/: argsss.py  cholesky.py  cholesky2.py  cholesky_vs_svd.py  indefinite_covariance_minpack.py  jacobian_minpack.py  regression_minpack.py  simple_covariance_minpack.py
