[metadata]
name = jaxfit
version = 0.0.3
author = Lucas Hofer
description = Uses JAX for GPU/TPU accelerated nonlinear least-squares curve fitting
long_description = This is a longer description for the project
url = https://github.com/Dipolar-Quantum-Gases/jaxfit
keywords = fit

[options]
python_requires = >=3.6, <4
install_requires = 
    numpy
	matplotlib
	scipy >= 1.7.0
	JAX >= 0.3.7

packages =
    jaxfit